@@ -1,85 +1,187 @@
 package ru.yandex.practicum.telemetry.collector.mapper;
 
+import com.google.protobuf.util.Timestamps;
+import jakarta.validation.constraints.NotNull;
+import ru.yandex.practicum.grpc.telemetry.event.*;
 import ru.yandex.practicum.kafka.telemetry.event.*;
-import ru.yandex.practicum.telemetry.collector.model.hub.*;
+import ru.yandex.practicum.telemetry.collector.model.hub.DeviceAddedEvent;
+import ru.yandex.practicum.telemetry.collector.model.hub.DeviceRemovedEvent;
+import ru.yandex.practicum.telemetry.collector.model.hub.HubEvent;
+import ru.yandex.practicum.telemetry.collector.model.hub.ScenarioAddedEvent;
+import ru.yandex.practicum.telemetry.collector.model.hub.ScenarioRemovedEvent;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class HubEventMapper {
 
-    public static HubEventAvro mapToAvro(HubEvent event) {
+    public static @NotNull HubEventAvro mapToAvro(@NotNull HubEvent event) {
         long timestamp = event.getTimestamp().toEpochMilli();
         String hubId = event.getHubId();
 
-        if (event instanceof DeviceAddedEvent e) {
-            DeviceAddedEventAvro payload = DeviceAddedEventAvro.newBuilder()
-                    .setId(e.getId())
-                    .setType(DeviceTypeAvro.valueOf(e.getDeviceType().name()))
-                    .build();
+        return switch (event) {
+            case DeviceAddedEvent e -> {
+                DeviceAddedEventAvro payload = DeviceAddedEventAvro.newBuilder()
+                        .setId(e.getId())
+                        .setType(DeviceTypeAvro.valueOf(e.getDeviceType().name()))
+                        .build();
 
-            return HubEventAvro.newBuilder()
-                    .setHubId(hubId)
-                    .setTimestamp(timestamp)
-                    .setPayload(payload)
-                    .build();
-        }
+                yield HubEventAvro.newBuilder()
+                        .setHubId(hubId)
+                        .setTimestamp(timestamp)
+                        .setPayload(payload)
+                        .build();
+            }
 
-        if (event instanceof DeviceRemovedEvent e) {
-            DeviceRemovedEventAvro payload = DeviceRemovedEventAvro.newBuilder()
-                    .setId(e.getId())
-                    .build();
+            case DeviceRemovedEvent e -> {
+                DeviceRemovedEventAvro payload = DeviceRemovedEventAvro.newBuilder()
+                        .setId(e.getId())
+                        .build();
 
-            return HubEventAvro.newBuilder()
-                    .setHubId(hubId)
-                    .setTimestamp(timestamp)
-                    .setPayload(payload)
-                    .build();
-        }
+                yield HubEventAvro.newBuilder()
+                        .setHubId(hubId)
+                        .setTimestamp(timestamp)
+                        .setPayload(payload)
+                        .build();
+            }
 
-        if (event instanceof ScenarioAddedEvent e) {
-            List<ScenarioConditionAvro> conditions = e.getConditions().stream()
-                    .map(c -> ScenarioConditionAvro.newBuilder()
-                            .setSensorId(c.getSensorId())
-                            .setType(ConditionTypeAvro.valueOf(c.getType().name()))
-                            .setOperation(ConditionOperationAvro.valueOf(c.getOperation().name()))
-                            .setValue(c.getValue()) // null, int, boolean
-                            .build())
-                    .collect(Collectors.toList());
+            case ScenarioAddedEvent e -> {
+                List<ScenarioConditionAvro> conditions = e.getConditions().stream()
+                        .map(c -> ScenarioConditionAvro.newBuilder()
+                                .setSensorId(c.getSensorId())
+                                .setType(ConditionTypeAvro.valueOf(c.getType().name()))
+                                .setOperation(ConditionOperationAvro.valueOf(c.getOperation().name()))
+                                .setValue(c.getValue())
+                                .build())
+                        .toList();
 
-            List<DeviceActionAvro> actions = e.getActions().stream()
-                    .map(a -> DeviceActionAvro.newBuilder()
-                            .setSensorId(a.getSensorId())
-                            .setType(ActionTypeAvro.valueOf(a.getType().name()))
-                            .setValue(a.getValue()) // nullable int
-                            .build())
-                    .collect(Collectors.toList());
+                List<DeviceActionAvro> actions = e.getActions().stream()
+                        .map(a -> DeviceActionAvro.newBuilder()
+                                .setSensorId(a.getSensorId())
+                                .setType(ActionTypeAvro.valueOf(a.getType().name()))
+                                .setValue(a.getValue())
+                                .build())
+                        .toList();
 
-            ScenarioAddedEventAvro payload = ScenarioAddedEventAvro.newBuilder()
-                    .setName(e.getName())
-                    .setConditions(conditions)
-                    .setActions(actions)
-                    .build();
+                ScenarioAddedEventAvro payload = ScenarioAddedEventAvro.newBuilder()
+                        .setName(e.getName())
+                        .setConditions(conditions)
+                        .setActions(actions)
+                        .build();
 
-            return HubEventAvro.newBuilder()
-                    .setHubId(hubId)
-                    .setTimestamp(timestamp)
-                    .setPayload(payload)
-                    .build();
-        }
+                yield HubEventAvro.newBuilder()
+                        .setHubId(hubId)
+                        .setTimestamp(timestamp)
+                        .setPayload(payload)
+                        .build();
+            }
 
-        if (event instanceof ScenarioRemovedEvent e) {
-            ScenarioRemovedEventAvro payload = ScenarioRemovedEventAvro.newBuilder()
-                    .setName(e.getName())
-                    .build();
+            case ScenarioRemovedEvent e -> {
+                ScenarioRemovedEventAvro payload = ScenarioRemovedEventAvro.newBuilder()
+                        .setName(e.getName())
+                        .build();
 
-            return HubEventAvro.newBuilder()
-                    .setHubId(hubId)
-                    .setTimestamp(timestamp)
-                    .setPayload(payload)
-                    .build();
-        }
+                yield HubEventAvro.newBuilder()
+                        .setHubId(hubId)
+                        .setTimestamp(timestamp)
+                        .setPayload(payload)
+                        .build();
+            }
 
-        throw new IllegalArgumentException("Unsupported event type: " + event.getClass().getName());
+            default -> throw new IllegalArgumentException("Unsupported event type: " + event.getClass().getName());
+        };
     }
+
+
+    public static @NotNull HubEventAvro mapToAvro(@NotNull HubEventProto proto) {
+        long timestamp = Timestamps.toMillis(proto.getTimestamp());
+        String hubId = proto.getHubId();
+
+        return switch (proto.getPayloadCase()) {
+            case DEVICE_ADDED -> {
+                DeviceAddedEventProto e = proto.getDeviceAdded();
+                DeviceAddedEventAvro payload = DeviceAddedEventAvro.newBuilder()
+                        .setId(e.getId())
+                        .setType(DeviceTypeAvro.valueOf(e.getType().name()))
+                        .build();
+
+                yield HubEventAvro.newBuilder()
+                        .setHubId(hubId)
+                        .setTimestamp(timestamp)
+                        .setPayload(payload)
+                        .build();
+            }
+
+            case DEVICE_REMOVED -> {
+                DeviceRemovedEventProto e = proto.getDeviceRemoved();
+                DeviceRemovedEventAvro payload = DeviceRemovedEventAvro.newBuilder()
+                        .setId(e.getId())
+                        .build();
+
+                yield HubEventAvro.newBuilder()
+                        .setHubId(hubId)
+                        .setTimestamp(timestamp)
+                        .setPayload(payload)
+                        .build();
+            }
+
+            case SCENARIO_ADDED -> {
+                ScenarioAddedEventProto e = proto.getScenarioAdded();
+
+                List<ScenarioConditionAvro> conditions = e.getConditionList().stream()
+                        .map(c -> {
+                            ScenarioConditionAvro.Builder b = ScenarioConditionAvro.newBuilder()
+                                    .setSensorId(c.getSensorId())
+                                    .setType(ConditionTypeAvro.valueOf(c.getType().name()))
+                                    .setOperation(ConditionOperationAvro.valueOf(c.getOperation().name()));
+
+                            switch (c.getValueCase()) {
+                                case BOOL_VALUE   -> b.setValue(c.getBoolValue());
+                                case INT_VALUE    -> b.setValue(c.getIntValue());
+                                default -> throw new IllegalArgumentException(
+                                        "Unsupported value type: " + c.getValueCase());
+                            }
+                            return b.build();
+                        })
+                        .toList();
+
+                List<DeviceActionAvro> actions = e.getActionList().stream()
+                        .map(a -> DeviceActionAvro.newBuilder()
+                                .setSensorId(a.getSensorId())
+                                .setType(ActionTypeAvro.valueOf(a.getType().name()))
+                                .setValue(a.getValue())
+                                .build())
+                        .toList();
+
+                ScenarioAddedEventAvro payload = ScenarioAddedEventAvro.newBuilder()
+                        .setName(e.getName())
+                        .setConditions(conditions)
+                        .setActions(actions)
+                        .build();
+
+                yield HubEventAvro.newBuilder()
+                        .setHubId(hubId)
+                        .setTimestamp(timestamp)
+                        .setPayload(payload)
+                        .build();
+            }
+
+            case SCENARIO_REMOVED -> {
+                ScenarioRemovedEventProto e = proto.getScenarioRemoved();
+                ScenarioRemovedEventAvro payload = ScenarioRemovedEventAvro.newBuilder()
+                        .setName(e.getName())
+                        .build();
+
+                yield HubEventAvro.newBuilder()
+                        .setHubId(hubId)
+                        .setTimestamp(timestamp)
+                        .setPayload(payload)
+                        .build();
+            }
+
+            case PAYLOAD_NOT_SET -> throw new IllegalArgumentException(
+                    "HubEventProto payload is not set or unrecognized: " + proto.getPayloadCase()
+            );
+        };
+    }
+
 }
